[package]
name = "work_with_redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lazy_static = "1.4.0"

[dependencies.redis]
version = "*"
